@@ -1020,6 +1020,7 @@ g_option_context_set_help_enabled
 g_option_context_get_help_enabled
 g_option_context_set_ignore_unknown_options
 g_option_context_get_ignore_unknown_options
+g_option_context_get_help
 GOptionArg
 GOptionFlags
 G_OPTION_REMAINING
