@@ -1,3 +1,7 @@
+2007-04-24  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/glib-sections.txt: Add g_option_context_get_help.
+
 2007-04-11  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* glib/glib-sections.txt: Add new hash functions.
